--- a/public/css/arf.css
+++ b/public/css/arf.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #ffffff;
-  font-size: 14px;
+  background-color: #f4eded;
+  font-size: 24px;
   font-family: "Helvetica Neue", Helvetica;
 }
 
@@ -38,7 +38,7 @@ body {
   top: 0px;
   right: 0;
   width: 330px;
-  font-size: 11px;
+  font-size: 21px;
   color: #000;
 }
 
@@ -54,7 +54,7 @@ body {
 }
 
 .node text {
-  font-size: 12px;
+  font-size: 10px;
   fill: rgb(0, 0, 0);
 }
 
